@@ -7,8 +7,6 @@ import org.springframework.web.bind.annotation.*;
 import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Paths;
-import java.util.Arrays;
-import java.util.UUID;
 
 import static java.util.UUID.randomUUID;
 
@@ -23,64 +21,63 @@ import static java.util.UUID.randomUUID;
 public class codeCompileController {
     @PostMapping("/compile")
     public Result<String> compile(@RequestParam String code, @RequestParam String lang){
-        File file = null;
         try{
             String fileFormat;  //生成代码文件的格式
-            String commandHead; //运行代码文件的命令头
-            String filename = "";    //生成代码文件的路径
             switch (lang){
                 case "python":
                     fileFormat = ".py";
-                    commandHead = "python";
                     break;
                 case "java":
                     fileFormat = ".java";
-                    commandHead = "javac";
-
                     break;
                 default:
                     return Result.error("2", "语言错误！");
             }
-            //生成代码文件，文件名用uuid命名
-            UUID uuid = randomUUID();
-            filename = System.getProperty("user.dir")+"/src/main/java/com/bjtu/simulation_platform_rear/codeFile/" + uuid.toString() + fileFormat;
-            file = new File(filename);
+
+            //生成代码文件，文件所在文件夹用uuid命名，文件命名Solution.*
+            String uuid = randomUUID().toString();
+            String filepath = System.getProperty("user.dir")+"\\src\\main\\java\\com\\bjtu\\simulation_platform_rear\\codeFile\\"+
+                    uuid;
+            Process createFolderProcess = Runtime.getRuntime().exec(new String[]{"cmd", "/c", "md "+ filepath});
+            createFolderProcess.waitFor();
+            createFolderProcess.destroy();
+
+            String filename = filepath + "\\Solution" + fileFormat;
+            File file = new File(filename);
             BufferedWriter bufferedWriter = new BufferedWriter(new OutputStreamWriter(Files.newOutputStream(Paths.get(filename))));
             bufferedWriter.write(code);
             bufferedWriter.close();
 
             //通过cmd命令，执行代码文件
-            Process ps = null;
-            String[] cmd = null;
+            Process compileProcess = null;
             switch (lang){
                 case "python":
-                    cmd = new String[]{"cmd", "/c", commandHead + " " + file.getAbsolutePath()};
-                    ps = Runtime.getRuntime().exec(cmd);
+                    compileProcess = Runtime.getRuntime().exec(new String[]{"cmd", "/c", "python" + " " + file.getAbsolutePath()});
                     break;
                 case "java":
-                    cmd = new String[]{"cmd", "/c", commandHead + " " + file.getAbsolutePath()};
-                    Process ps1 = Runtime.getRuntime().exec(cmd);
-                    commandHead = "java";
-                    cmd = new String[]{"cmd", "/c", commandHead + " " + file.getAbsolutePath().replace(".java", "")};
-                    log.info(Arrays.toString(cmd));
-                    ps = Runtime.getRuntime().exec(cmd);
+                    compileProcess = Runtime.getRuntime().exec(new String[]{"cmd", "/c", "javac " +
+                            file.getAbsolutePath() + " && java -cp " + filepath + " Solution"});
                     break;
             }
 
             //获取执行结果，通过接口返回
-            BufferedReader br = new BufferedReader(new InputStreamReader(ps.getInputStream()));
+            BufferedReader br = new BufferedReader(new InputStreamReader(compileProcess.getInputStream()));
             StringBuilder sb = new StringBuilder();
             String line;
             while ((line = br.readLine()) != null) {
                 sb.append(line).append("\n");
             }
             String result = sb.toString();
-//            file.delete();
-            ps.destroy();
+            Runtime.getRuntime().exec(new String[]{"cmd", "/c", "rd /s /q "+ filepath});
+            compileProcess.destroy();
             return Result.success(result);
         }catch (Exception e){
-//            if(file != null && file.exists())
-//                file.delete();
+            try{
+                Runtime.getRuntime().exec(new String[]{"cmd", "/c", "rd /s /q "+
+                        System.getProperty("user.dir")+"\\src\\main\\java\\com\\bjtu\\simulation_platform_rear\\codeFile\\*.*"});
+            }catch (IOException e1){
+                e1.printStackTrace();
+            }
             e.printStackTrace();
             return Result.error("1", "编译错误！");
         }
